# SegNetSet

./: CMakeLists.txt  README.md  SegNetSet.cpp  SegNetSet.h  prepare_set.cpp
